fix tabs background, add content variation when medium should be scrollable, add theme and spacing

--- a/src/component-library/core-components/Tabs/Tabs.module.scss
+++ b/src/component-library/core-components/Tabs/Tabs.module.scss
@@ -87,6 +87,13 @@
 
     &:checked + label {
       color: var(--tab-active-text);
+      background-color: var(--tab-background);
+    }
+  }
+
+  &.scroll-max-large {
+    @include media(screen-l, max) {
+      overflow-x: auto;
     }
   }
 }
