--- a/src/component-library/foundation/Themes/theme-parts/_tabs.module.scss
+++ b/src/component-library/foundation/Themes/theme-parts/_tabs.module.scss
@@ -1,10 +1,6 @@
 @use '../../Colours/colours.module' as *;
 
-@mixin apply-tabs(
-  $background: $background,
-  $text: $navy-blue-100,
-  $text-active: $text
-) {
+@mixin apply-tabs($background, $text: $navy-blue-100, $text-active: $text) {
   --tab-text: #{$text};
   --tab-active-text: #{$text-active};
   --tab-background: #{$background};
