--- a/src/component-library/yext/YextSearch/YextSearch.module.scss
+++ b/src/component-library/yext/YextSearch/YextSearch.module.scss
@@ -15,3 +15,7 @@
   flex-direction: column;
   gap: $spacing-2;
 }
+
+.tabs {
+  padding: $spacing-5 0;
+}
